--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta property="og:title" content="Jeffrey Lu"/>
+	<meta property="og:description" content="Jeffrey Lu | Student, Developer, Designer"/>
+	<meta property="og:url" content="https://JeffreyPLu.github.io"/>
+	<meta property="og:image" content="https://JeffreyPLu.github.io/Images/Thumbnail.png"/>
+	<meta property="og:image:width" content="900"/>
+	<meta property="og:image:height" content="900"/>
+	<meta property="og:type" content="website"/>
+	<link rel="shortcut icon" href="/Images/Favicon.png">
 	<title>Jeffrey Lu</title>
 
 	<!-- CSS and JS -->
