Meta image cache fixes

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta property="og:title" content="Jeffrey Lu"/>
 	<meta property="og:description" content="Jeffrey Lu | Student, Developer, Designer"/>
 	<meta property="og:url" content="https://JeffreyPLu.github.io"/>
-	<meta property="og:image" content="https://JeffreyPLu.github.io/Images/Thumbnail.png"/>
+	<meta property="og:image" content="https://JeffreyPLu.github.io/Images/Thumbnail2.png"/>
 	<meta property="og:image:width" content="1200"/>
 	<meta property="og:image:height" content="630"/>
 	<meta property="og:type" content="website"/>
