--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 	<meta property="og:description" content="Jeffrey Lu | Student, Developer, Designer"/>
 	<meta property="og:url" content="https://JeffreyPLu.github.io"/>
 	<meta property="og:image" content="https://JeffreyPLu.github.io/Images/Thumbnail2.png"/>
-	<meta property="og:image:width" content="1200"/>
-	<meta property="og:image:height" content="630"/>
+	<meta property="og:image" content="https://JeffreyPLu.github.io/Images/Small Thumbnail.png"/>
 	<meta property="og:type" content="website"/>
 	<link rel="shortcut icon" href="/Images/Favicon.png">
 	<title>Jeffrey Lu</title>
