--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 
 			<div class="spacer"></div>
 
-			<h3 class="link">HOME</h3>
-			<h3 class="link">ABOUT</h3>
-			<h3 class="link">RESUME</h3>
+			<h3 class="link underline">HOME</h3>
+			<h3 class="link underline">ABOUT</h3>
+			<h3 class="link underline">RESUME</h3>
 		</div>
 
 		<div class="header">
@@ -134,7 +134,7 @@
 				<h5>Tuesday</h4>
 				<h6>2020 - Now</h6>
 				<p>A web app that will help students with work management by using AI models to prioritize tasks</p>
-				<a href="javascript:alert('No')">Read More</a>
+				<a class="underline" href="javascript:alert('No')">Read More</a>
 				<div class="spacer"></div>
 				<div class="logos">
 					<img src="/Images/Django Logo.png" alt="Django">
@@ -150,7 +150,7 @@
 				<h5>Skin Lesion Classifier</h5>
 				<h6>2021</h6>
 				<p>An image classification neural network and accompanying web app that helps determine if a skin lesion is harmful or not</p>
-				<a href="javascript:alert('No')">Read More</a>
+				<a class="underline" href="javascript:alert('No')">Read More</a>
 				<div class="spacer"></div>
 				<div class="logos">
 					<img src="/Images/Python Logo.png" alt="Python">
@@ -163,7 +163,7 @@
 				<h5>ML Explorer</h5>
 				<h6>2021 - Now</h6>
 				<p>A web app where anyone can build, train, and evaluate neural networks without writing a single line of code</p>
-				<a href="javascript:alert('No')">Read More</a>
+				<a class="underline" href="javascript:alert('No')">Read More</a>
 				<div class="spacer"></div>
 				<div class="logos">
 					<img src="/Images/Python Logo.png" alt="Python">
@@ -181,7 +181,7 @@
 				<h5>Doc Tracker</h4>
 				<h6>2022</h6>
 				<p>A simple and lightweight web app that automatically tracks who views shared documents and when they viewed them</p>
-				<a href="javascript:alert('No')">Read More</a>
+				<a class="underline" href="javascript:alert('No')">Read More</a>
 				<div class="spacer"></div>
 				<div class="logos">
 					<img src="/Images/GAS Logo.png" alt="Google Apps Script">
@@ -195,7 +195,7 @@
 				<h5>Logo Cloud</h5>
 				<h6>2022</h6>
 				<p>The 100% vanilla JS spinning cloud of logos in the skills section of this site</p>
-				<a href="javascript:alert('No')">Read More</a>
+				<a class="underline" href="javascript:alert('No')">Read More</a>
 				<div class="spacer"></div>
 				<div class="logos">
 					<img src="/Images/JavaScript Logo.png" alt="JS">
@@ -206,7 +206,7 @@
 				<h5>Stock Bot</h5>
 				<h6>2022 - Now</h6>
 				<p>An AI stock trading recommender that uses news sentiment analysis and live stock data to determine which stocks to buy and sell</p>
-				<a href="javascript:alert('No')">Read More</a>
+				<a class="underline" href="javascript:alert('No')">Read More</a>
 				<div class="spacer"></div>
 				<div class="logos">
 					<img src="/Images/Python Logo.png" alt="Python">
@@ -218,7 +218,7 @@
 				<h5>Wordle Bot</h5>
 				<h6>2022</h6>
 				<p>An algorithm that uses Google Ngrams and information theory to play Wordle in the browser through Selenium</p>
-				<a href="javascript:alert('No')">Read More</a>
+				<a class="underline" href="javascript:alert('No')">Read More</a>
 				<div class="spacer"></div>
 				<div class="logos">
 					<img src="/Images/Python Logo.png" alt="Python">
