--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 			<h3 class="link underline">HOME</h3>
 			<h3 class="link underline">ABOUT</h3>
-			<h3 class="link underline">RESUME</h3>
+			<h3 class="link underline">CONTACT</h3>
 		</div>
 
 		<div class="header">
