--- a/index.html
+++ b/index.html
@@ -30,202 +30,210 @@
 
 			<div class="spacer"></div>
 
-			<h3 class="link underline">HOME</h3>
+			<h3 class="link underline active">HOME</h3>
 			<h3 class="link underline">ABOUT</h3>
 			<h3 class="link underline">CONTACT</h3>
 		</div>
-
-		<div class="header">
-			<h1 class="name">Jeffrey Lu</h1>
-			<h2 class="descriptions" id="descriptions"></h2>
-		</div>
-
-		<div class="skills section">
-			<h4>Skills</h4>
-			<p>
-				My primary focus is learning AI and ML technologies, but I also do a lot of cross-platform web design and development.
-				<br><br>
-				I have worked with key web technologies like HTML, CSS, and JS for over 3 years, but I've also learned Python and Tensorflow more recently to further expand my toolkit.
-				<br><br>
-				I also enjoy technically challenging  “miniprojects” that solve unusual or niche problems by applying knowledge from other fields to computer science.
-			</p>
-			<div class="cloud" id="cloud">
-				<div class="image-container">
-					<img src="/Images/CSS Logo.png">
-					<div class="tooltip-container"><p class="tooltip">CSS</p></div>
-				</div>
 		
-				<div class="image-container">
-					<img src="/Images/Django Logo.png">
-					<div class="tooltip-container"><p class="tooltip">Django</p></div>
-				</div>
-		
-				<div class="image-container">
-					<img src="/Images/Figma Logo.png">
-					<div class="tooltip-container"><p class="tooltip">Figma</p></div>
-				</div>
-		
-				<div class="image-container">
-					<img src="/Images/GAS Logo.png">
-					<div class="tooltip-container"><p class="tooltip">Google Apps Script</p></div>
-				</div>
-		
-				<div class="image-container">
-					<img src="/Images/Git Logo.png">
-					<div class="tooltip-container"><p class="tooltip">Git</p></div>
-				</div>
-		
-				<div class="image-container">
-					<img src="/Images/Github Logo.png">
-					<div class="tooltip-container"><p class="tooltip">Github</p></div>
-				</div>
-		
-				<div class="image-container">
-					<img src="/Images/Heroku Logo.png">
-					<div class="tooltip-container"><p class="tooltip">Heroku</p></div>
-				</div>
-		
-				<div class="image-container">
-					<img src="/Images/HTML Logo.png">
-					<div class="tooltip-container"><p class="tooltip">HTML</p></div>
-				</div>
-		
-				<div class="image-container">
-					<img src="/Images/Java Logo.png">
-					<div class="tooltip-container"><p class="tooltip">Java</p></div>
-				</div>
-		
-				<div class="image-container">
-					<img src="/Images/JavaScript Logo.png">
-					<div class="tooltip-container"><p class="tooltip">Javascript</p></div>
-				</div>
-		
-				<div class="image-container">
-					<img src="/Images/Postgres Logo.png">
-					<div class="tooltip-container"><p class="tooltip">Postgres</p></div>
-				</div>
-		
-				<div class="image-container">
-					<img src="/Images/Python Logo.png">
-					<div class="tooltip-container"><p class="tooltip">Python</p></div>
-				</div>
-		
-				<div class="image-container">
-					<img src="/Images/Sklearn Logo.png">
-					<div class="tooltip-container"><p class="tooltip">Scikit Learn</p></div>
-				</div>
-		
-				<div class="image-container">
-					<img src="/Images/Streamlit Logo.png">
-					<div class="tooltip-container"><p class="tooltip">Streamlit</p></div>
-				</div>
-		
-				<div class="image-container">
-					<img src="/Images/Tensorflow Logo.png">
-					<div class="tooltip-container"><p class="tooltip">Tensorflow</p></div>
-				</div>
-			</div>
-		</div>
-
-		<div class="projects section">
-			<h4>Projects</h4>
-
-			<div class="project-card">
-				<h5>Tuesday</h4>
-				<h6>2020 - Now</h6>
-				<p>A web app that will help students with work management by using AI models to prioritize tasks</p>
-				<a class="underline" href="javascript:alert('No')">Read More</a>
-				<div class="spacer"></div>
-				<div class="logos">
-					<img src="/Images/Django Logo.png" alt="Django">
-					<img src="/Images/Postgres Logo.png" alt="Postgres">
-					<img src="/Images/Tensorflow Logo.png" alt="Tensorflow">
-					<img src="/Images/HTML Logo.png" alt="HTML">
-					<img src="/Images/CSS Logo.png" alt="CSS">
-					<img src="/Images/JavaScript Logo.png" alt="JS">
-				</div>
+		<page id="HOME">
+			<div class="header">
+				<h1 class="name">Jeffrey Lu</h1>
+				<h2 class="descriptions" id="descriptions"></h2>
 			</div>
 
-			<div class="project-card">
-				<h5>Skin Lesion Classifier</h5>
-				<h6>2021</h6>
-				<p>An image classification neural network and accompanying web app that helps determine if a skin lesion is harmful or not</p>
-				<a class="underline" href="javascript:alert('No')">Read More</a>
-				<div class="spacer"></div>
-				<div class="logos">
-					<img src="/Images/Python Logo.png" alt="Python">
-					<img src="/Images/Tensorflow Logo.png" alt="Tensorflow">
-					<img src="/Images/Streamlit Logo.png" alt="Streamlit">
-				</div>
-			</div>
-
-			<div class="project-card">
-				<h5>ML Explorer</h5>
-				<h6>2021 - Now</h6>
-				<p>A web app where anyone can build, train, and evaluate neural networks without writing a single line of code</p>
-				<a class="underline" href="javascript:alert('No')">Read More</a>
-				<div class="spacer"></div>
-				<div class="logos">
-					<img src="/Images/Python Logo.png" alt="Python">
-					<img src="/Images/Sklearn Logo.png" alt="Scikit Learn">
-					<img src="/Images/Streamlit Logo.png" alt="Streamlit">
-				</div>
-			</div>
-
-		</div>
-
-		<div class="projects section">
-			<h4>Miniprojects</h4>
-
-			<div class="project-card">
-				<h5>Doc Tracker</h4>
-				<h6>2022</h6>
-				<p>A simple and lightweight web app that automatically tracks who views shared documents and when they viewed them</p>
-				<a class="underline" href="javascript:alert('No')">Read More</a>
-				<div class="spacer"></div>
-				<div class="logos">
-					<img src="/Images/GAS Logo.png" alt="Google Apps Script">
-					<img src="/Images/HTML Logo.png" alt="HTML">
-					<img src="/Images/CSS Logo.png" alt="CSS">
-					<img src="/Images/JavaScript Logo.png" alt="JS">
-				</div>
-			</div>
-
-			<div class="project-card">
-				<h5>Logo Cloud</h5>
-				<h6>2022</h6>
-				<p>The 100% vanilla JS spinning cloud of logos in the skills section of this site</p>
-				<a class="underline" href="javascript:alert('No')">Read More</a>
-				<div class="spacer"></div>
-				<div class="logos">
-					<img src="/Images/JavaScript Logo.png" alt="JS">
-				</div>
-			</div>
-
-			<div class="project-card">
-				<h5>Stock Bot</h5>
-				<h6>2022 - Now</h6>
-				<p>An AI stock trading recommender that uses news sentiment analysis and live stock data to determine which stocks to buy and sell</p>
-				<a class="underline" href="javascript:alert('No')">Read More</a>
-				<div class="spacer"></div>
-				<div class="logos">
-					<img src="/Images/Python Logo.png" alt="Python">
-					<img src="/Images/Tensorflow Logo.png" alt="Tensorflow">
-				</div>
-			</div>
-
-			<div class="project-card">
-				<h5>Wordle Bot</h5>
-				<h6>2022</h6>
-				<p>An algorithm that uses Google Ngrams and information theory to play Wordle in the browser through Selenium</p>
-				<a class="underline" href="javascript:alert('No')">Read More</a>
-				<div class="spacer"></div>
-				<div class="logos">
-					<img src="/Images/Python Logo.png" alt="Python">
-				</div>
-			</div>
+			<div class="skills section">
+				<h4>Skills</h4>
+				<p>
+					My primary focus is learning AI and ML technologies, but I also do a lot of cross-platform web design and development.
+					<br><br>
+					I have worked with key web technologies like HTML, CSS, and JS for over 3 years, but I've also learned Python and Tensorflow more recently to further expand my toolkit.
+					<br><br>
+					I also enjoy technically challenging  “miniprojects” that solve unusual or niche problems by applying knowledge from other fields to computer science.
+				</p>
+				<div class="cloud" id="cloud">
+					<div class="image-container">
+						<img src="/Images/CSS Logo.png">
+						<div class="tooltip-container"><p class="tooltip">CSS</p></div>
+					</div>
 			
-		</div>
+					<div class="image-container">
+						<img src="/Images/Django Logo.png">
+						<div class="tooltip-container"><p class="tooltip">Django</p></div>
+					</div>
+			
+					<div class="image-container">
+						<img src="/Images/Figma Logo.png">
+						<div class="tooltip-container"><p class="tooltip">Figma</p></div>
+					</div>
+			
+					<div class="image-container">
+						<img src="/Images/GAS Logo.png">
+						<div class="tooltip-container"><p class="tooltip">Google Apps Script</p></div>
+					</div>
+			
+					<div class="image-container">
+						<img src="/Images/Git Logo.png">
+						<div class="tooltip-container"><p class="tooltip">Git</p></div>
+					</div>
+			
+					<div class="image-container">
+						<img src="/Images/Github Logo.png">
+						<div class="tooltip-container"><p class="tooltip">Github</p></div>
+					</div>
+			
+					<div class="image-container">
+						<img src="/Images/Heroku Logo.png">
+						<div class="tooltip-container"><p class="tooltip">Heroku</p></div>
+					</div>
+			
+					<div class="image-container">
+						<img src="/Images/HTML Logo.png">
+						<div class="tooltip-container"><p class="tooltip">HTML</p></div>
+					</div>
+			
+					<div class="image-container">
+						<img src="/Images/Java Logo.png">
+						<div class="tooltip-container"><p class="tooltip">Java</p></div>
+					</div>
+			
+					<div class="image-container">
+						<img src="/Images/JavaScript Logo.png">
+						<div class="tooltip-container"><p class="tooltip">Javascript</p></div>
+					</div>
+			
+					<div class="image-container">
+						<img src="/Images/Postgres Logo.png">
+						<div class="tooltip-container"><p class="tooltip">Postgres</p></div>
+					</div>
+			
+					<div class="image-container">
+						<img src="/Images/Python Logo.png">
+						<div class="tooltip-container"><p class="tooltip">Python</p></div>
+					</div>
+			
+					<div class="image-container">
+						<img src="/Images/Sklearn Logo.png">
+						<div class="tooltip-container"><p class="tooltip">Scikit Learn</p></div>
+					</div>
+			
+					<div class="image-container">
+						<img src="/Images/Streamlit Logo.png">
+						<div class="tooltip-container"><p class="tooltip">Streamlit</p></div>
+					</div>
+			
+					<div class="image-container">
+						<img src="/Images/Tensorflow Logo.png">
+						<div class="tooltip-container"><p class="tooltip">Tensorflow</p></div>
+					</div>
+				</div>
+			</div>
+
+			<div class="projects section">
+				<h4>Projects</h4>
+
+				<div class="project-card">
+					<h5>Tuesday</h4>
+					<h6>2020 - Now</h6>
+					<p>A web app that will help students with work management by using AI models to prioritize tasks</p>
+					<a class="underline" href="javascript:alert('No')">Read More</a>
+					<div class="spacer"></div>
+					<div class="logos">
+						<img src="/Images/Django Logo.png" alt="Django">
+						<img src="/Images/Postgres Logo.png" alt="Postgres">
+						<img src="/Images/Tensorflow Logo.png" alt="Tensorflow">
+						<img src="/Images/HTML Logo.png" alt="HTML">
+						<img src="/Images/CSS Logo.png" alt="CSS">
+						<img src="/Images/JavaScript Logo.png" alt="JS">
+					</div>
+				</div>
+
+				<div class="project-card">
+					<h5>Skin Lesion Classifier</h5>
+					<h6>2021</h6>
+					<p>An image classification neural network and accompanying web app that helps determine if a skin lesion is harmful or not</p>
+					<a class="underline" href="javascript:alert('No')">Read More</a>
+					<div class="spacer"></div>
+					<div class="logos">
+						<img src="/Images/Python Logo.png" alt="Python">
+						<img src="/Images/Tensorflow Logo.png" alt="Tensorflow">
+						<img src="/Images/Streamlit Logo.png" alt="Streamlit">
+					</div>
+				</div>
+
+				<div class="project-card">
+					<h5>ML Explorer</h5>
+					<h6>2021 - Now</h6>
+					<p>A web app where anyone can build, train, and evaluate neural networks without writing a single line of code</p>
+					<a class="underline" href="javascript:alert('No')">Read More</a>
+					<div class="spacer"></div>
+					<div class="logos">
+						<img src="/Images/Python Logo.png" alt="Python">
+						<img src="/Images/Sklearn Logo.png" alt="Scikit Learn">
+						<img src="/Images/Streamlit Logo.png" alt="Streamlit">
+					</div>
+				</div>
+
+			</div>
+
+			<div class="projects section">
+				<h4>Miniprojects</h4>
+
+				<div class="project-card">
+					<h5>Doc Tracker</h4>
+					<h6>2022</h6>
+					<p>A simple and lightweight web app that automatically tracks who views shared documents and when they viewed them</p>
+					<a class="underline" href="javascript:alert('No')">Read More</a>
+					<div class="spacer"></div>
+					<div class="logos">
+						<img src="/Images/GAS Logo.png" alt="Google Apps Script">
+						<img src="/Images/HTML Logo.png" alt="HTML">
+						<img src="/Images/CSS Logo.png" alt="CSS">
+						<img src="/Images/JavaScript Logo.png" alt="JS">
+					</div>
+				</div>
+
+				<div class="project-card">
+					<h5>Logo Cloud</h5>
+					<h6>2022</h6>
+					<p>The 100% vanilla JS spinning cloud of logos in the skills section of this site</p>
+					<a class="underline" href="javascript:alert('No')">Read More</a>
+					<div class="spacer"></div>
+					<div class="logos">
+						<img src="/Images/JavaScript Logo.png" alt="JS">
+					</div>
+				</div>
+
+				<div class="project-card">
+					<h5>Stock Bot</h5>
+					<h6>2022 - Now</h6>
+					<p>An AI stock trading recommender that uses news sentiment analysis and live stock data to determine which stocks to buy and sell</p>
+					<a class="underline" href="javascript:alert('No')">Read More</a>
+					<div class="spacer"></div>
+					<div class="logos">
+						<img src="/Images/Python Logo.png" alt="Python">
+						<img src="/Images/Tensorflow Logo.png" alt="Tensorflow">
+					</div>
+				</div>
+
+				<div class="project-card">
+					<h5>Wordle Bot</h5>
+					<h6>2022</h6>
+					<p>An algorithm that uses Google Ngrams and information theory to play Wordle in the browser through Selenium</p>
+					<a class="underline" href="javascript:alert('No')">Read More</a>
+					<div class="spacer"></div>
+					<div class="logos">
+						<img src="/Images/Python Logo.png" alt="Python">
+					</div>
+				</div>
+				
+			</div>
+		</page>
+
+		<page id="ABOUT">
+		</page>
+
+		<page id="CONTACT">
+		</page>
 	</div>
 	<footer>
 		<div class="spacer"></div>
