Accessibility and performance optimizations

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 	<script defer src="script.js"></script>
 
 	<!-- Fonts -->
-	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&display=swap" rel="stylesheet" defer>
 </head>
 <body>
 	<div class="main">
@@ -53,77 +53,77 @@
 				<div class="cloud" id="cloud">
 					<div class="image-container">
 						<img src="/Images/CSS Logo.png">
-						<div class="tooltip-container"><p class="tooltip">CSS</p></div>
+						<div alt="CSS" class="tooltip-container"><p class="tooltip">CSS</p></div>
 					</div>
 			
 					<div class="image-container">
 						<img src="/Images/Django Logo.png">
-						<div class="tooltip-container"><p class="tooltip">Django</p></div>
+						<div alt="Django" class="tooltip-container"><p class="tooltip">Django</p></div>
 					</div>
 			
 					<div class="image-container">
 						<img src="/Images/Figma Logo.png">
-						<div class="tooltip-container"><p class="tooltip">Figma</p></div>
+						<div alt="Figma" class="tooltip-container"><p class="tooltip">Figma</p></div>
 					</div>
 			
 					<div class="image-container">
 						<img src="/Images/GAS Logo.png">
-						<div class="tooltip-container"><p class="tooltip">Google Apps Script</p></div>
+						<div alt="Google Apps Script" class="tooltip-container"><p class="tooltip">Google Apps Script</p></div>
 					</div>
 			
 					<div class="image-container">
 						<img src="/Images/Git Logo.png">
-						<div class="tooltip-container"><p class="tooltip">Git</p></div>
+						<div alt="Git" class="tooltip-container"><p class="tooltip">Git</p></div>
 					</div>
 			
 					<div class="image-container">
 						<img src="/Images/Github Logo.png">
-						<div class="tooltip-container"><p class="tooltip">Github</p></div>
+						<div alt="Github" class="tooltip-container"><p class="tooltip">Github</p></div>
 					</div>
 			
 					<div class="image-container">
 						<img src="/Images/Heroku Logo.png">
-						<div class="tooltip-container"><p class="tooltip">Heroku</p></div>
+						<div alt="Heroku" class="tooltip-container"><p class="tooltip">Heroku</p></div>
 					</div>
 			
 					<div class="image-container">
 						<img src="/Images/HTML Logo.png">
-						<div class="tooltip-container"><p class="tooltip">HTML</p></div>
+						<div alt="HTML" class="tooltip-container"><p class="tooltip">HTML</p></div>
 					</div>
 			
 					<div class="image-container">
 						<img src="/Images/Java Logo.png">
-						<div class="tooltip-container"><p class="tooltip">Java</p></div>
+						<div alt="Java" class="tooltip-container"><p class="tooltip">Java</p></div>
 					</div>
 			
 					<div class="image-container">
 						<img src="/Images/JavaScript Logo.png">
-						<div class="tooltip-container"><p class="tooltip">Javascript</p></div>
+						<div alt="Javascript" class="tooltip-container"><p class="tooltip">Javascript</p></div>
 					</div>
 			
 					<div class="image-container">
 						<img src="/Images/Postgres Logo.png">
-						<div class="tooltip-container"><p class="tooltip">Postgres</p></div>
+						<div alt="Postgres" class="tooltip-container"><p class="tooltip">Postgres</p></div>
 					</div>
 			
 					<div class="image-container">
 						<img src="/Images/Python Logo.png">
-						<div class="tooltip-container"><p class="tooltip">Python</p></div>
+						<div alt="Python" class="tooltip-container"><p class="tooltip">Python</p></div>
 					</div>
 			
 					<div class="image-container">
 						<img src="/Images/Sklearn Logo.png">
-						<div class="tooltip-container"><p class="tooltip">Scikit Learn</p></div>
+						<div alt="Scikit Learn" class="tooltip-container"><p class="tooltip">Scikit Learn</p></div>
 					</div>
 			
 					<div class="image-container">
 						<img src="/Images/Streamlit Logo.png">
-						<div class="tooltip-container"><p class="tooltip">Streamlit</p></div>
+						<div alt="Streamlit" class="tooltip-container"><p class="tooltip">Streamlit</p></div>
 					</div>
 			
 					<div class="image-container">
 						<img src="/Images/Tensorflow Logo.png">
-						<div class="tooltip-container"><p class="tooltip">Tensorflow</p></div>
+						<div alt="Tensorflow" class="tooltip-container"><p class="tooltip">Tensorflow</p></div>
 					</div>
 				</div>
 			</div>
