--- a/index.html
+++ b/index.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<!-- Meta -->
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<!-- Open graph meta -->
 	<meta property="og:title" content="Jeffrey Lu"/>
 	<meta property="og:description" content="Jeffrey Lu | Student, Developer, Designer"/>
 	<meta property="og:url" content="https://JeffreyPLu.github.io"/>
 	<meta property="og:image" content="https://JeffreyPLu.github.io/Images/Thumbnail2.png"/>
 	<meta property="og:image" content="https://JeffreyPLu.github.io/Images/Small Thumbnail.png"/>
 	<meta property="og:type" content="website"/>
+
+	<!-- Regular Meta -->
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="shortcut icon" href="/Images/Favicon.png">
 	<title>Jeffrey Lu</title>
+	<meta name="description" content="Jeffrey Lu | Student, Developer, Designer">
+
 
 	<!-- CSS and JS -->
 	<link rel="stylesheet" href="style.css">
