Moved alt tags from div to img

--- a/index.html
+++ b/index.html
@@ -55,78 +55,78 @@
 				</p>
 				<div class="cloud" id="cloud">
 					<div class="image-container">
-						<img src="/Images/CSS Logo.png">
-						<div alt="CSS" class="tooltip-container"><p class="tooltip">CSS</p></div>
+						<img alt="CSS" src="/Images/CSS Logo.png">
+						<div class="tooltip-container"><p class="tooltip">CSS</p></div>
 					</div>
 			
 					<div class="image-container">
-						<img src="/Images/Django Logo.png">
-						<div alt="Django" class="tooltip-container"><p class="tooltip">Django</p></div>
+						<img alt="Django" src="/Images/Django Logo.png">
+						<div class="tooltip-container"><p class="tooltip">Django</p></div>
 					</div>
 			
 					<div class="image-container">
-						<img src="/Images/Figma Logo.png">
-						<div alt="Figma" class="tooltip-container"><p class="tooltip">Figma</p></div>
+						<img alt="Figma" src="/Images/Figma Logo.png">
+						<div class="tooltip-container"><p class="tooltip">Figma</p></div>
 					</div>
 			
 					<div class="image-container">
-						<img src="/Images/GAS Logo.png">
-						<div alt="Google Apps Script" class="tooltip-container"><p class="tooltip">Google Apps Script</p></div>
+						<img alt="Google Apps Script" src="/Images/GAS Logo.png">
+						<div class="tooltip-container"><p class="tooltip">Google Apps Script</p></div>
 					</div>
 			
 					<div class="image-container">
-						<img src="/Images/Git Logo.png">
-						<div alt="Git" class="tooltip-container"><p class="tooltip">Git</p></div>
+						<img alt="Git" src="/Images/Git Logo.png">
+						<div class="tooltip-container"><p class="tooltip">Git</p></div>
 					</div>
 			
 					<div class="image-container">
-						<img src="/Images/Github Logo.png">
-						<div alt="Github" class="tooltip-container"><p class="tooltip">Github</p></div>
+						<img alt="Github" src="/Images/Github Logo.png">
+						<div class="tooltip-container"><p class="tooltip">Github</p></div>
 					</div>
 			
 					<div class="image-container">
-						<img src="/Images/Heroku Logo.png">
-						<div alt="Heroku" class="tooltip-container"><p class="tooltip">Heroku</p></div>
+						<img alt="Heroku" src="/Images/Heroku Logo.png">
+						<div class="tooltip-container"><p class="tooltip">Heroku</p></div>
 					</div>
 			
 					<div class="image-container">
-						<img src="/Images/HTML Logo.png">
-						<div alt="HTML" class="tooltip-container"><p class="tooltip">HTML</p></div>
+						<img alt="HTML" src="/Images/HTML Logo.png">
+						<div class="tooltip-container"><p class="tooltip">HTML</p></div>
 					</div>
 			
 					<div class="image-container">
-						<img src="/Images/Java Logo.png">
-						<div alt="Java" class="tooltip-container"><p class="tooltip">Java</p></div>
+						<img alt="Java" src="/Images/Java Logo.png">
+						<div class="tooltip-container"><p class="tooltip">Java</p></div>
 					</div>
 			
 					<div class="image-container">
-						<img src="/Images/JavaScript Logo.png">
-						<div alt="Javascript" class="tooltip-container"><p class="tooltip">Javascript</p></div>
+						<img alt="Javascript" src="/Images/JavaScript Logo.png">
+						<div class="tooltip-container"><p class="tooltip">Javascript</p></div>
 					</div>
 			
 					<div class="image-container">
-						<img src="/Images/Postgres Logo.png">
-						<div alt="Postgres" class="tooltip-container"><p class="tooltip">Postgres</p></div>
+						<img alt="Postgres" src="/Images/Postgres Logo.png">
+						<div class="tooltip-container"><p class="tooltip">Postgres</p></div>
 					</div>
 			
 					<div class="image-container">
-						<img src="/Images/Python Logo.png">
-						<div alt="Python" class="tooltip-container"><p class="tooltip">Python</p></div>
+						<img alt="Python" src="/Images/Python Logo.png">
+						<div class="tooltip-container"><p class="tooltip">Python</p></div>
 					</div>
 			
 					<div class="image-container">
-						<img src="/Images/Sklearn Logo.png">
-						<div alt="Scikit Learn" class="tooltip-container"><p class="tooltip">Scikit Learn</p></div>
+						<img alt="Scikit Learn" src="/Images/Sklearn Logo.png">
+						<div class="tooltip-container"><p class="tooltip">Scikit Learn</p></div>
 					</div>
 			
 					<div class="image-container">
-						<img src="/Images/Streamlit Logo.png">
-						<div alt="Streamlit" class="tooltip-container"><p class="tooltip">Streamlit</p></div>
+						<img alt="Streamlit" src="/Images/Streamlit Logo.png">
+						<div class="tooltip-container"><p class="tooltip">Streamlit</p></div>
 					</div>
 			
 					<div class="image-container">
-						<img src="/Images/Tensorflow Logo.png">
-						<div alt="Tensorflow" class="tooltip-container"><p class="tooltip">Tensorflow</p></div>
+						<img alt="Tensorflow" src="/Images/Tensorflow Logo.png">
+						<div class="tooltip-container"><p class="tooltip">Tensorflow</p></div>
 					</div>
 				</div>
 			</div>
