Accessibility and performance fixes

--- a/index.html
+++ b/index.html
@@ -22,9 +22,8 @@
 	<script defer src="script.js"></script>
 
 	<!-- Fonts -->
-	<link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&display=swap" rel="stylesheet" defer>
+	<link href="inter.css" rel="stylesheet" defer>
 </head>
 <body>
 	<div class="main">
@@ -45,7 +44,7 @@
 			</div>
 
 			<div class="skills section">
-				<h4>Skills</h4>
+				<h3>Skills</h3>
 				<p>
 					My primary focus is learning AI and ML technologies, but I also do a lot of cross-platform web design and development.
 					<br><br>
@@ -132,11 +131,11 @@
 			</div>
 
 			<div class="projects section">
-				<h4>Projects</h4>
+				<h3>Projects</h3>
 
 				<div class="project-card">
-					<h5>Tuesday</h4>
-					<h6>2020 - Now</h6>
+					<h4>Tuesday</h4>
+					<h5>2020 - Now</h5>
 					<p>A web app that will help students with work management by using AI models to prioritize tasks</p>
 					<a class="underline" href="javascript:alert('No')">Read More</a>
 					<div class="spacer"></div>
@@ -151,8 +150,8 @@
 				</div>
 
 				<div class="project-card">
-					<h5>Skin Lesion Classifier</h5>
-					<h6>2021</h6>
+					<h4>Skin Lesion Classifier</h4>
+					<h5>2021</h5>
 					<p>An image classification neural network and accompanying web app that helps determine if a skin lesion is harmful or not</p>
 					<a class="underline" href="javascript:alert('No')">Read More</a>
 					<div class="spacer"></div>
@@ -164,8 +163,8 @@
 				</div>
 
 				<div class="project-card">
-					<h5>ML Explorer</h5>
-					<h6>2021 - Now</h6>
+					<h4>ML Explorer</h4>
+					<h5>2021 - Now</h5>
 					<p>A web app where anyone can build, train, and evaluate neural networks without writing a single line of code</p>
 					<a class="underline" href="javascript:alert('No')">Read More</a>
 					<div class="spacer"></div>
@@ -179,11 +178,11 @@
 			</div>
 
 			<div class="projects section">
-				<h4>Miniprojects</h4>
+				<h3>Miniprojects</h3>
 
 				<div class="project-card">
-					<h5>Doc Tracker</h4>
-					<h6>2022</h6>
+					<h4>Doc Tracker</h4>
+					<h5>2022</h5>
 					<p>A simple and lightweight web app that automatically tracks who views shared documents and when they viewed them</p>
 					<a class="underline" href="javascript:alert('No')">Read More</a>
 					<div class="spacer"></div>
@@ -196,8 +195,8 @@
 				</div>
 
 				<div class="project-card">
-					<h5>Logo Cloud</h5>
-					<h6>2022</h6>
+					<h4>Logo Cloud</h4>
+					<h5>2022</h5>
 					<p>The 100% vanilla JS spinning cloud of logos in the skills section of this site</p>
 					<a class="underline" href="javascript:alert('No')">Read More</a>
 					<div class="spacer"></div>
@@ -207,8 +206,8 @@
 				</div>
 
 				<div class="project-card">
-					<h5>Stock Bot</h5>
-					<h6>2022 - Now</h6>
+					<h4>Stock Bot</h4>
+					<h5>2022 - Now</h5>
 					<p>An AI stock trading recommender that uses news sentiment analysis and live stock data to determine which stocks to buy and sell</p>
 					<a class="underline" href="javascript:alert('No')">Read More</a>
 					<div class="spacer"></div>
@@ -219,8 +218,8 @@
 				</div>
 
 				<div class="project-card">
-					<h5>Wordle Bot</h5>
-					<h6>2022</h6>
+					<h4>Wordle Bot</h4>
+					<h5>2022</h5>
 					<p>An algorithm that uses Google Ngrams and information theory to play Wordle in the browser through Selenium</p>
 					<a class="underline" href="javascript:alert('No')">Read More</a>
 					<div class="spacer"></div>
