Meta image test

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta property="og:title" content="Jeffrey Lu"/>
 	<meta property="og:description" content="Jeffrey Lu | Student, Developer, Designer"/>
 	<meta property="og:url" content="https://JeffreyPLu.github.io"/>
-	<meta property="og:image" content="https://JeffreyPLu.github.io/Images/Thumbnail2.png"/>
+	<!-- <meta property="og:image" content="https://JeffreyPLu.github.io/Images/Thumbnail2.png"/> -->
 	<meta property="og:image" content="https://JeffreyPLu.github.io/Images/Small Thumbnail.png"/>
 	<meta property="og:type" content="website"/>
 
@@ -136,7 +136,7 @@
 				<div class="project-card">
 					<h4>Tuesday</h4>
 					<h5>2020 - Now</h5>
-					<p>A web app that will help students with work management by using AI models to prioritize tasks</p>
+					<p>A web app that will help students with work management by using NLP AI to prioritize tasks</p>
 					<a class="underline" href="javascript:alert('No')">Read More</a>
 					<div class="spacer"></div>
 					<div class="logos">
@@ -165,7 +165,7 @@
 				<div class="project-card">
 					<h4>ML Explorer</h4>
 					<h5>2021 - Now</h5>
-					<p>A web app where anyone can build, train, and evaluate neural networks without writing a single line of code</p>
+					<p>A web app allows anyone to build, train, and evaluate neural networks without writing a single line of code</p>
 					<a class="underline" href="javascript:alert('No')">Read More</a>
 					<div class="spacer"></div>
 					<div class="logos">
@@ -197,7 +197,7 @@
 				<div class="project-card">
 					<h4>Logo Cloud</h4>
 					<h5>2022</h5>
-					<p>The 100% vanilla JS spinning cloud of logos in the skills section of this site</p>
+					<p>The 100% vanilla JS spinning cloud of logos that's showcased in the skills section of this site</p>
 					<a class="underline" href="javascript:alert('No')">Read More</a>
 					<div class="spacer"></div>
 					<div class="logos">
@@ -208,7 +208,7 @@
 				<div class="project-card">
 					<h4>Stock Bot</h4>
 					<h5>2022 - Now</h5>
-					<p>An AI stock trading recommender that uses news sentiment analysis and live stock data to determine which stocks to buy and sell</p>
+					<p>An AI stock recommender that uses news sentiment analysis and live stock data to determine which stocks to buy and sell</p>
 					<a class="underline" href="javascript:alert('No')">Read More</a>
 					<div class="spacer"></div>
 					<div class="logos">
