Scroll reminder for mobile

--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
 	<link href="inter.css" rel="stylesheet" defer>
 </head>
 <body>
+	<div id="scroll-reminder">
+		<div class="arrow"></div>
+		<p>Scroll</p>
+	</div>
 	<div class="main">
 		<div class="nav">
 			<h3 class="icon">JL</h3>
