--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 					<h4>Tuesday</h4>
 					<h5>2020 - Now</h5>
 					<p>A web app that will help students with work management by using NLP AI to prioritize tasks</p>
-					<a class="underline" href="javascript:alert('No')">Read More</a>
+					<a class="underline" href="javascript:alert('Not ready yet!')">Read More</a>
 					<div class="spacer"></div>
 					<div class="logos">
 						<img src="/Images/Django Logo.png" alt="Django">
@@ -157,7 +157,7 @@
 					<h4>Skin Lesion Classifier</h4>
 					<h5>2021</h5>
 					<p>An image classification neural network and accompanying web app that helps determine if a skin lesion is harmful or not</p>
-					<a class="underline" href="javascript:alert('No')">Read More</a>
+					<a class="underline" href="javascript:alert('Not ready yet!')">Read More</a>
 					<div class="spacer"></div>
 					<div class="logos">
 						<img src="/Images/Python Logo.png" alt="Python">
@@ -170,7 +170,7 @@
 					<h4>ML Explorer</h4>
 					<h5>2021 - Now</h5>
 					<p>A web app allows anyone to build, train, and evaluate neural networks without writing a single line of code</p>
-					<a class="underline" href="javascript:alert('No')">Read More</a>
+					<a class="underline" href="javascript:alert('Not ready yet!')">Read More</a>
 					<div class="spacer"></div>
 					<div class="logos">
 						<img src="/Images/Python Logo.png" alt="Python">
@@ -188,7 +188,7 @@
 					<h4>Doc Tracker</h4>
 					<h5>2022</h5>
 					<p>A simple and lightweight web app that automatically tracks who views shared documents and when they viewed them</p>
-					<a class="underline" href="javascript:alert('No')">Read More</a>
+					<a class="underline" href="javascript:alert('Not ready yet!')">Read More</a>
 					<div class="spacer"></div>
 					<div class="logos">
 						<img src="/Images/GAS Logo.png" alt="Google Apps Script">
@@ -202,7 +202,7 @@
 					<h4>Logo Cloud</h4>
 					<h5>2022</h5>
 					<p>The 100% vanilla JS spinning cloud of logos that's showcased in the skills section of this site</p>
-					<a class="underline" href="javascript:alert('No')">Read More</a>
+					<a class="underline" href="javascript:alert('Not ready yet!')">Read More</a>
 					<div class="spacer"></div>
 					<div class="logos">
 						<img src="/Images/JavaScript Logo.png" alt="JS">
@@ -213,7 +213,7 @@
 					<h4>Stock Bot</h4>
 					<h5>2022 - Now</h5>
 					<p>An AI stock recommender that uses news sentiment analysis and live stock data to determine which stocks to buy and sell</p>
-					<a class="underline" href="javascript:alert('No')">Read More</a>
+					<a class="underline" href="javascript:alert('Not ready yet!')">Read More</a>
 					<div class="spacer"></div>
 					<div class="logos">
 						<img src="/Images/Python Logo.png" alt="Python">
@@ -225,7 +225,7 @@
 					<h4>Wordle Bot</h4>
 					<h5>2022</h5>
 					<p>An algorithm that uses Google Ngrams and information theory to play Wordle in the browser through Selenium</p>
-					<a class="underline" href="javascript:alert('No')">Read More</a>
+					<a class="underline" href="javascript:alert('Not ready yet!')">Read More</a>
 					<div class="spacer"></div>
 					<div class="logos">
 						<img src="/Images/Python Logo.png" alt="Python">
