Temp incomplete messages

--- a/index.html
+++ b/index.html
@@ -235,10 +235,12 @@
 			</div>
 		</page>
 
-		<page id="ABOUT">
+		<page id="ABOUT" class="hidden">
+			<p class="temp">Thanks for checking out my site, but I'm not done building it yet!</p>
 		</page>
 
-		<page id="CONTACT">
+		<page id="CONTACT" class="hidden">
+			<p class="temp">Thanks for checking out my site, but I'm not done building it yet! You can contact me at <a href="mailto:jeffrey.p.lu@gmail.com">jeffrey.p.lu@gmail.com</a></p>
 		</page>
 	</div>
 	<footer>
