--- a/index.html
+++ b/index.html
@@ -138,10 +138,24 @@
 				<h3>Projects</h3>
 
 				<div class="project-card">
+					<h4>NLP Research</h4>
+					<h5>2022 - Now</h5>
+					<p>An ongoing research initiative to improve the ability of NLP AI to solve reading comprehension tasks</p>
+					<a class="underline" href="javascript:alert('Not ready yet!')"></a>
+					<div class="spacer"></div>
+					<div class="logos">
+						<img src="/Images/Python Logo.png" alt="Python">
+						<img src="/Images/Sklearn Logo.png" alt="Scikit Learn">
+						<img src="/Images/Tensorflow Logo.png" alt="Tensorflow">
+						<img src="/Images/Streamlit Logo.png" alt="Streamlit">
+					</div>
+				</div>
+
+				<div class="project-card">
 					<h4>Tuesday</h4>
 					<h5>2020 - Now</h5>
-					<p>A web app that will help students with work management by using NLP AI to prioritize tasks</p>
-					<a class="underline" href="javascript:alert('Not ready yet!')">Read More</a>
+					<p>A web app that helps students with work management by using AI to prioritize tasks (full rewrite in progress)</p>
+					<a class="underline" href="https://tues.tech">Open</a>
 					<div class="spacer"></div>
 					<div class="logos">
 						<img src="/Images/Django Logo.png" alt="Django">
@@ -157,7 +171,7 @@
 					<h4>Skin Lesion Classifier</h4>
 					<h5>2021</h5>
 					<p>An image classification neural network and accompanying web app that helps determine if a skin lesion is harmful or not</p>
-					<a class="underline" href="javascript:alert('Not ready yet!')">Read More</a>
+					<a class="underline" href="javascript:alert('Not ready yet!')"></a>
 					<div class="spacer"></div>
 					<div class="logos">
 						<img src="/Images/Python Logo.png" alt="Python">
@@ -167,15 +181,14 @@
 				</div>
 
 				<div class="project-card">
-					<h4>ML Explorer</h4>
-					<h5>2021 - Now</h5>
-					<p>A web app allows anyone to build, train, and evaluate neural networks without writing a single line of code</p>
-					<a class="underline" href="javascript:alert('Not ready yet!')">Read More</a>
+					<h4>Health Equality Research</h4>
+					<h5>2022</h5>
+					<p>A short research paper finding and analyzing the correlations between socioeconomic status and health outcomes in the US</p>
+					<a class="underline" href="https://drive.google.com/file/d/1vBjPQ5vrCxuSJQ1Sz-X3Pl-WQn4WPyAQ/view">Read</a>
 					<div class="spacer"></div>
 					<div class="logos">
 						<img src="/Images/Python Logo.png" alt="Python">
 						<img src="/Images/Sklearn Logo.png" alt="Scikit Learn">
-						<img src="/Images/Streamlit Logo.png" alt="Streamlit">
 					</div>
 				</div>
 
@@ -188,7 +201,7 @@
 					<h4>Doc Tracker</h4>
 					<h5>2022</h5>
 					<p>A simple and lightweight web app that automatically tracks who views shared documents and when they viewed them</p>
-					<a class="underline" href="javascript:alert('Not ready yet!')">Read More</a>
+					<a class="underline" href="javascript:alert('Not ready yet!')"></a>
 					<div class="spacer"></div>
 					<div class="logos">
 						<img src="/Images/GAS Logo.png" alt="Google Apps Script">
@@ -201,8 +214,8 @@
 				<div class="project-card">
 					<h4>Logo Cloud</h4>
 					<h5>2022</h5>
-					<p>The 100% vanilla JS spinning cloud of logos that's showcased in the skills section of this site</p>
-					<a class="underline" href="javascript:alert('Not ready yet!')">Read More</a>
+					<p>An application of the Fibonacci sphere algorithm and rotation matrices to make the logo cloud in the skills section of this site</p>
+					<a class="underline" href="https://github.com/JeffreyPLu/jeffreyplu.github.io/blob/main/script.js#L162">View Source</a>
 					<div class="spacer"></div>
 					<div class="logos">
 						<img src="/Images/JavaScript Logo.png" alt="JS">
@@ -210,22 +223,10 @@
 				</div>
 
 				<div class="project-card">
-					<h4>Stock Bot</h4>
-					<h5>2022 - Now</h5>
-					<p>An AI stock recommender that uses news sentiment analysis and live stock data to determine which stocks to buy and sell</p>
-					<a class="underline" href="javascript:alert('Not ready yet!')">Read More</a>
-					<div class="spacer"></div>
-					<div class="logos">
-						<img src="/Images/Python Logo.png" alt="Python">
-						<img src="/Images/Tensorflow Logo.png" alt="Tensorflow">
-					</div>
-				</div>
-
-				<div class="project-card">
 					<h4>Wordle Bot</h4>
 					<h5>2022</h5>
 					<p>An algorithm that uses Google Ngrams and information theory to play Wordle in the browser through Selenium</p>
-					<a class="underline" href="javascript:alert('Not ready yet!')">Read More</a>
+					<a class="underline" href="javascript:alert('Not ready yet!')"></a>
 					<div class="spacer"></div>
 					<div class="logos">
 						<img src="/Images/Python Logo.png" alt="Python">
@@ -236,11 +237,11 @@
 		</page>
 
 		<page id="ABOUT" class="hidden">
-			<p class="temp">Thanks for checking out my site, but I'm not done building it yet!</p>
+			<p class="temp">idk what to put here</p>
 		</page>
 
 		<page id="CONTACT" class="hidden">
-			<p class="temp">Thanks for checking out my site, but I'm not done building it yet! You can contact me at <a href="mailto:jeffrey.p.lu@gmail.com">jeffrey.p.lu@gmail.com</a></p>
+			<p class="temp">No</p>
 		</page>
 	</div>
 	<footer>
@@ -249,7 +250,8 @@
 		<div class="nope"><img src="/Images/Discord Logo.png" alt="Discord"></div>
 		<div class="nope"><img src="/Images/Linkedin Logo.png" alt="Linkedin"></div>
 		<div class="spacer"></div>
-		<p>&copy; 2022 Jeffrey Lu </p>
+		<div class="message"><p>Made from scratch</p><a href="https://github.com/JeffreyPLu/jeffreyplu.github.io" target="_blank" class="underline">View source</a></div>
+		<p class="copy">Copyright &copy; 2022 Jeffrey Lu </p>
 	</footer>
 </body>
 </html>
