Replace temporary messages

--- a/index.html
+++ b/index.html
@@ -237,11 +237,11 @@
 		</page>
 
 		<page id="ABOUT" class="hidden">
-			<p class="temp">idk what to put here</p>
+			<p class="temp">Work in progress</p>
 		</page>
 
 		<page id="CONTACT" class="hidden">
-			<p class="temp">No</p>
+			<p class="temp">Work in progress</p>
 		</page>
 	</div>
 	<footer>
