Update research link

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 					<h4>Health Equality Research</h4>
 					<h5>2022</h5>
 					<p>A short research paper finding and analyzing the correlations between socioeconomic status and health outcomes in the US</p>
-					<a class="underline" href="https://drive.google.com/file/d/1suK2ZHePj-jT6JuPwWb4JpywhaMBWqrT/view">Read</a>
+					<a class="underline" href="https://arxiv.org/abs/2212.04285">Read</a>
 					<div class="spacer"></div>
 					<div class="logos">
 						<img src="/Images/Python Logo.png" alt="Python">
