Update snapchat contact icon to github

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
 	</div>
 	<footer>
 		<div class="spacer"></div>
-		<div class="nope"><img src="/Images/Snapchat Logo.png" alt="Snapchat"></div>
+		<div class="nope"><img src="/Images/Github Logo.png" alt="Snapchat"></div>
 		<div class="nope"><img src="/Images/Discord Logo.png" alt="Discord"></div>
 		<div class="nope"><img src="/Images/Linkedin Logo.png" alt="Linkedin"></div>
 		<div class="spacer"></div>
