--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 			<h3 class="link underline active">HOME</h3>
 			<h3 class="link underline">ABOUT</h3>
-			<h3 class="link underline">CONTACT</h3>
+			<h3 class="link underline">RESEARCH</h3>
 		</div>
 		
 		<page id="HOME">
@@ -52,9 +52,9 @@
 				<p>
 					My primary focus is learning AI and ML technologies, but I also do a lot of cross-platform web design and development.
 					<br><br>
-					I have worked with key web technologies like HTML, CSS, and JS for over 3 years, but I've also learned Python and Tensorflow more recently to further expand my toolkit.
+					I have worked with frontend web technologies like HTML, CSS, and JS for over 3 years. I have 2 years of experience with Python, both for backend web development and machine learning with TensorFlow.
 					<br><br>
-					I also enjoy technically challenging  “miniprojects” that solve unusual or niche problems by applying knowledge from other fields to computer science.
+					I also enjoy technically challenging  “miniprojects” that solve unusual or niche problems by applying aspects of other fields to computer science.
 				</p>
 				<div class="cloud" id="cloud">
 					<div class="image-container">
@@ -145,9 +145,7 @@
 					<div class="spacer"></div>
 					<div class="logos">
 						<img src="/Images/Python Logo.png" alt="Python">
-						<img src="/Images/Sklearn Logo.png" alt="Scikit Learn">
 						<img src="/Images/Tensorflow Logo.png" alt="Tensorflow">
-						<img src="/Images/Streamlit Logo.png" alt="Streamlit">
 					</div>
 				</div>
 
@@ -181,7 +179,7 @@
 				</div>
 
 				<div class="project-card">
-					<h4>Health Equality Research</h4>
+					<h4>Health Inequality Research</h4>
 					<h5>2022</h5>
 					<p>A short research paper finding and analyzing the correlations between socioeconomic status and health outcomes in the US</p>
 					<a class="underline" href="https://arxiv.org/abs/2212.04285">Read</a>
@@ -240,7 +238,7 @@
 			<p class="temp">Work in progress</p>
 		</page>
 
-		<page id="CONTACT" class="hidden">
+		<page id="RESEARCH" class="hidden">
 			<p class="temp">Work in progress</p>
 		</page>
 	</div>
@@ -251,7 +249,7 @@
 		<div class="nope"><img src="/Images/Linkedin Logo.png" alt="Linkedin"></div>
 		<div class="spacer"></div>
 		<div class="message"><p>Made from scratch</p><a href="https://github.com/JeffreyPLu/jeffreyplu.github.io" target="_blank" class="underline">View source</a></div>
-		<p class="copy">Copyright &copy; 2022 Jeffrey Lu </p>
+		<p class="copy">Copyright &copy; 2023 Jeffrey Lu </p>
 	</footer>
 </body>
 </html>
